# framework.security.security-server

./: .gitignore  CMakeLists.txt  label-blacklist  label-whitelist  project.config
modules_mobile/: CMakeLists.txt
modules_mobile/src/client/: security-server-client.c
modules_mobile/src/include/: security-server-password.h  smack-check.h
modules_mobile/systemd/: security-server-privilege-by-pid.socket
modules_wearable/src/server/dpl/log/src/: audit-smack-log.cpp
modules_wearable/src/server/service/: password-file.cpp
packaging/: libprivilege-control-conf.manifest  security-server.manifest  security-server.spec
privilege-conf/: CMakeLists.txt  apply_onlycap.sh  capability_setting  onlycap_list  onlycap_list_emul  smack_default_labeling
privilege-db/: 220.libprivilege-updater.patch.sh  CMakeLists.txt  load-rules-db.sql  load-rules.sh  remove-volatile-rules.sql  rules-db-data.sql.in  rules-db.sql.in  rules-db.xml
privilege-db/updates/: update-rules-db-data-to-v2.sql  update-rules-db-data-to-v3.sql  update-rules-db-data-to-v4.sql  update-rules-db-data-to-v5.sql  update-rules-db-data-to-v7.sql  update-rules-db-data-to-v8.sql  update-rules-db-data-to-v9.sql  update-rules-db-to-v2.sql  update-rules-db-to-v3.sql  update-rules-db-to-v4.sql.in  update-rules-db-to-v5.sql.in  update-rules-db-to-v6.sql  update-rules-db-to-v8.sql  update-rules-db-to-v9.sql
src/: CMakeLists.txt
src/api_feature_loader/: CMakeLists.txt  api_feature_loader.c
src/client/: security-server-client.c
src/communication/: security-server-comm.c
src/include/: security-server-comm.h  security-server-common.h  security-server-error.h  security-server-perm-types.h  security-server-perm.h  security-server-plugin-api.h  security-server.h  smack-check.h
src/server/: CMakeLists.txt  security-server-cookie.c  security-server-main.c  security-server-password.c
src/server/client/: client-app-permissions.cpp  client-common.cpp  client-common.h  client-cookie.cpp  client-domain.cpp  client-label.cpp  client-open-for.cpp  client-password.cpp  client-privilege-by-pid.cpp  client-socket-privilege.cpp
src/server/common/: configuration.cpp  configuration.h  error-description.cpp  error-description.h  label-common.cpp  label-common.h  message-buffer.cpp  message-buffer.h  permission-types.cpp  permission-types.h  protocols.cpp  protocols.h  smack-check.cpp  smack-check.h  zone-check.cpp  zone-check.h
src/server/dpl/core/include/dpl/: serialization.h
src/server/dpl/log/src/: audit-smack-log.cpp
src/server/main/: generic-socket-manager.h  server2-main.cpp  service-thread.h  socket-manager.cpp  socket-manager.h
src/server/privilege/: common.c  common.h  privilege-control.c  privilege-control.h  rules-db-internals.c  rules-db-internals.h  rules-db.c  rules-db.h  utils.c  utils.h
src/server/service/: app-permissions.cpp  app-permissions.h  cookie-common.cpp  cookie-jar.cpp  cookie-jar.h  cookie.cpp  cookie.h  data-share.cpp  data-share.h  get-gid.cpp  get-gid.h  label.cpp  label.h  open-for-manager.cpp  open-for-manager.h  open-for.cpp  open-for.h  password-exception.h  password-file-buffer.cpp  password-file.cpp  password-file.h  password-manager.cpp  password-manager.h  password.cpp  password.h  plugin-handler.cpp  plugin-handler.h  privilege-by-pid.cpp  privilege-by-pid.h  transaction_manager.cpp  transaction_manager.h
src/smack_rules_buffer/: CMakeLists.txt  smack_rules_buffer.c
src/ss_cleanup/: CMakeLists.txt  sharing_cleanup.cpp
src/util/: security-server-util-common.c
systemd/: CMakeLists.txt  security-server-label.socket  security-server-open-for-privileged.socket  security-server-open-for-unprivileged.socket  security-server-permissions.socket  security-server.service  smack-default-labeling.service  smack-rules.service
