#Copyright (c) 2014-2015 Samsung Electronics Co., Ltd All Rights Reserved
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.


# @file        CMakeLists.txt
# @author      Marcin Lis (m.lis@samsung.com)
# @version     1.0
# @brief       CMake file for the smack_rules_buffer

SET(TARGET_SMACK_RULES_BUFFER "smack_rules_buffer")

#files to compile
SET(TARGET_SOURCES
    ${PROJECT_SOURCE_DIR}/src/smack_rules_buffer/smack_rules_buffer.c
    )

SET_SOURCE_FILES_PROPERTIES(
    ${TARGET_SOURCES}
    PROPERTIES
        COMPILE_FLAGS "-fPIE")

#output format
ADD_EXECUTABLE(${TARGET_SMACK_RULES_BUFFER} ${TARGET_SOURCES})

TARGET_LINK_LIBRARIES(${TARGET_SMACK_RULES_BUFFER}
    -pie
    )

#place for output file
INSTALL(TARGETS ${TARGET_SMACK_RULES_BUFFER}
    DESTINATION /usr/bin)
